--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,79 @@
-/* Add your CSS to this file */
+:root{
+    font-size: 18px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+nav{
+    color: #6b7280;   
+}
+
+nav:hover{
+    color: #5A67D8;
+}
+
 body {
     margin: 0;
     font-size: 16px;
 }
 
+header{
+    background-color: white;
+}
+
+h1{
+    font-size: 24px;
+    color: #48BB78;
+}
+
+h2{
+    font-size: 24px;
+    color : #48bb78;
+}
+.stories img{
+    border-radius: 5px;
+}
+
+.newsletter{
+    background-color: #48bb78;
+    color: white;
+}
+
+.cards{
+    box-shadow: 5px #e2e8f0;
+}
 .container {
     margin: 0 auto;
     max-width: 960px;
     width: 100%;
 }
+
+.testing{
+    background-color: #4a5568;
+    color: white;
+}
+
+.cta .btn{
+    background-color: #48bb78;
+    border-radius: 5px;
+}
+
+.stories  h2{
+    font-size: 18px;
+    color: #5A67D8;
+}
+
+.stories a{
+    color: #5A67D8
+}
+
+.learn-about h3{
+    font-size: 21px;
+    color: #48bb78;
+}
+
+.newsletter .btn{
+    background-color: #5a67d8;
+    color: white;
+    border-radius: 5px;
+}
+
